--- a/Example/package.json
+++ b/Example/package.json
@@ -6,6 +6,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react-native": "^0.18.1",
     "react-native-redux-router": "^1.0.6",
     "react-native-root-modal": "^1.0.1"
